--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -179,7 +179,7 @@ RUN  if [ "${ARCH}" == "s390x" ]; then \
 
 ENV CATTLE_UI_VERSION 2.6.5-rc2
 ENV CATTLE_DASHBOARD_UI_VERSION v2.6.5-rc2
-ENV CATTLE_CLI_VERSION v2.6.4
+ENV CATTLE_CLI_VERSION v2.6.5-rc1
 
 # Please update the api-ui-version in pkg/settings/settings.go when updating the version here.
 ENV CATTLE_API_UI_VERSION 1.1.9
