--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -64,7 +64,7 @@ ENV CATTLE_SYSTEM_AGENT_UPGRADE_IMAGE rancher/system-agent:${CATTLE_SYSTEM_AGENT
 ENV CATTLE_SYSTEM_UPGRADE_CONTROLLER_CHART_VERSION 100.0.2+up0.3.2
 
 # System charts minimal version
-ENV CATTLE_FLEET_MIN_VERSION=100.0.3+up0.3.9-rc1
+ENV CATTLE_FLEET_MIN_VERSION=100.0.3+up0.3.9
 ENV CATTLE_RANCHER_WEBHOOK_MIN_VERSION=1.0.4+up0.2.5-rc3
 
 RUN mkdir -p /var/lib/rancher-data/local-catalogs/system-library && \
