Update k3s and rke2 terraform to use user home directory for scripts

--- a/tests/validation/.gitignore
+++ b/tests/validation/.gitignore
@@ -102,3 +102,12 @@ ENV/
 # Local test generation
 .DS_store
 .ssh
+
+# Terraform
+.terraform
+*.terraform.*
+*.terraform
+.terraform.*
+*.tfstate
+*.tfstate.*
+.tfstate.*
