--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
-.drone.yml @oxr463 @paraglade @rosskirkpat
+.drone.yml @phillipsj @rosskirkpat @superseb
 *_windows.go @phillipsj @rosskirkpat
 /package/windows/  @phillipsj @rosskirkpat
 /scripts/windows/  @phillipsj @rosskirkpat
